--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ flutter:
   - images/timg.jpg
   - images/timg2.jpg
   - images/timg3.jpg
+  - images/sun.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
