--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   event_bus: ^1.1.0
+  drag_list: ^1.0.4
 
 dev_dependencies:
   flutter_test:
