--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   event_bus: ^1.1.0
   drag_list: ^1.0.4
+  flutter_slidable: ^0.5.4
+  flutter_screenutil: ^0.5.2
 
 dev_dependencies:
   flutter_test:
