--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   drag_list: ^1.0.4
   flutter_slidable: ^0.5.4
   flutter_screenutil: ^0.5.2
+  sliding_up_panel: ^0.3.6
 
 dev_dependencies:
   flutter_test:
