--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   flutter_slidable: ^0.5.4
   flutter_screenutil: ^0.5.2
   sliding_up_panel: ^0.3.6
+  liquid_swipe: ^1.3.0
+  shared_preferences: ^0.5.0
+  flute_music_player: ^0.0.6
 
 dev_dependencies:
   flutter_test:
@@ -45,12 +48,12 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-  - images/lake.jpg
-  - images/111.png
-  - images/timg.jpg
-  - images/timg2.jpg
-  - images/timg3.jpg
-  - images/sun.jpg
+    - images/lake.jpg
+    - images/111.png
+    - images/timg.jpg
+    - images/timg2.jpg
+    - images/timg3.jpg
+    - images/sun.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
