--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   liquid_swipe: ^1.3.0
   shared_preferences: ^0.5.0
   flute_music_player: ^0.0.6
+  image_picker: ^0.4.12
 
 dev_dependencies:
   flutter_test:
