--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,9 @@ dependencies:
   flutter_slidable: ^0.5.4
   flutter_screenutil: ^0.5.2
   sliding_up_panel: ^0.3.6
-  liquid_swipe: ^1.3.0
+  liquid_swipe: ^1.3.1
   shared_preferences: ^0.5.0
-  flute_music_player: ^0.0.6
-  image_picker: ^0.4.12
+  image_picker: 0.6.2
 
 dev_dependencies:
   flutter_test:
