--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   liquid_swipe: ^1.3.0
   shared_preferences: ^0.5.0
   image_picker: 0.6.2
+  curved_navigation_bar: ^0.3.2
 
 dev_dependencies:
   flutter_test:
