--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   shared_preferences: ^0.5.0
   image_picker: 0.6.2
   curved_navigation_bar: ^0.3.2
+  url_launcher: ^5.2.1
 
 dev_dependencies:
   flutter_test:
