--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   image_picker: 0.6.2
   curved_navigation_bar: ^0.3.2
   url_launcher: ^5.2.1
+  local_auth: ^0.6.1
 
 dev_dependencies:
   flutter_test:
