--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   curved_navigation_bar: ^0.3.2
   url_launcher: ^5.2.1
   local_auth: ^0.6.1
+  provider: 3.1.0+1
+  flutter_speed_dial: ^1.2.4
+  table_calendar: 2.2.2
 
 dev_dependencies:
   flutter_test:
