--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: 3.1.0+1
   flutter_speed_dial: ^1.2.4
   table_calendar: 2.2.2
+  simple_animations: 1.3.8
 
 dev_dependencies:
   flutter_test:
