1.U 骑上我心爱的小飞机

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
     - images/timg2.jpg
     - images/timg3.jpg
     - images/sun.jpg
+    - images/plane1.gif
 
   # To add assets to your application, add an assets section, like this:
   # assets:
