--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,10 @@ flutter:
     - images/timg3.jpg
     - images/sun.jpg
     - images/plane1.gif
+    - images/plane2.gif
+    - images/oneday.gif
+    - images/cloud3.gif
+    - images/cloud2.gif
 
   # To add assets to your application, add an assets section, like this:
   # assets:
