--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   flutter_speed_dial: ^1.2.4
   table_calendar: 2.2.2
   simple_animations: 1.3.8
+  google_sign_in: ^4.0.12
+  firebase_analytics: ^5.0.2
+  firebase_auth: ^0.15.0
+  firebase_storage: ^3.0.10
 
 dev_dependencies:
   flutter_test:
