--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_analytics: ^5.0.2
   firebase_auth: ^0.15.0
   firebase_storage: ^3.0.10
+  firebase_database: ^3.0.9
+  http: ^0.12.0+4
 
 dev_dependencies:
   flutter_test:
