--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_auth: ^0.15.0
   firebase_storage: ^3.0.10
   firebase_database: ^3.0.9
+  firebase_core: ^0.4.0+9
   http: ^0.12.0+4
 
 dev_dependencies:
