--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_database: ^3.0.9
   firebase_core: ^0.4.0+9
   http: ^0.12.0+4
+  photo_view: ^0.4.2
 
 dev_dependencies:
   flutter_test:
