--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_core: ^0.4.0+9
   http: ^0.12.0+4
   photo_view: ^0.4.2
+  agora_rtc_engine: ^1.0.1
 
 dev_dependencies:
   flutter_test:
