--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   http: ^0.12.0+4
   photo_view: ^0.4.2
   agora_rtc_engine: ^1.0.1
+  video_player: ^0.10.2+5
+  orientation: ^1.1.0
+  common_utils: ^1.1.3
 
 dev_dependencies:
   flutter_test:
