--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   video_player: ^0.10.2+5
   orientation: ^1.1.0
   common_utils: ^1.1.3
+  dio: ^3.0.9
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
@@ -80,6 +82,7 @@ flutter:
     - images/cloud2.gif
     - images/cloud1.gif
     - images/cloud5.gif
+    - images/weather/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
