--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   common_utils: ^1.1.3
   dio: ^3.0.9
   intl: ^0.16.1
+  audioplayers: 0.13.6
 
 dev_dependencies:
   flutter_test:
