--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   dio: ^3.0.9
   intl: ^0.16.1
   audioplayers: 0.13.6
+  image_picker_saver: 0.3.0
+  permission_handler: ^3.0.0
 
 dev_dependencies:
   flutter_test:
