--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ flutter:
     - images/cloud1.gif
     - images/cloud5.gif
     - images/weather/
+    - images/_cat_sky.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
