--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   audioplayers: 0.13.6
   image_picker_saver: 0.3.0
   permission_handler: ^3.0.0
+  flutter_full_pdf_viewer: ^1.0.6
 
 dev_dependencies:
   flutter_test:
