--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   image_picker_saver: 0.3.0
   permission_handler: ^3.0.0
   flutter_full_pdf_viewer: ^1.0.6
+  flutter_staggered_animations: ^0.1.2
 
 dev_dependencies:
   flutter_test:
