--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   flutter_full_pdf_viewer: ^1.0.6
   flutter_staggered_animations: ^0.1.2
   qrscan: ^0.2.17
+  mini_calendar: ^0.3.1
 
 dev_dependencies:
   flutter_test:
