--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   flutter_staggered_animations: ^0.1.2
   qrscan: ^0.2.17
   mini_calendar: ^0.3.1
+  flutter_picker: ^1.1.4
 
 dev_dependencies:
   flutter_test:
