--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   qrscan: ^0.2.17
   mini_calendar: ^0.3.1
   flutter_picker: ^1.1.4
+  flutter_swiper: ^1.1.6
 
 dev_dependencies:
   flutter_test:
