--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,13 @@ dependencies:
   flutter_slidable: ^0.5.4
   flutter_screenutil: ^0.5.2
   sliding_up_panel: ^0.3.6
-  liquid_swipe: ^1.3.0
+  liquid_swipe: ^1.4.3
   shared_preferences: ^0.5.0
   image_picker: 0.6.2
   curved_navigation_bar: ^0.3.2
   url_launcher: ^5.2.1
   local_auth: ^0.6.1
-  provider: 3.1.0+1
+  provider: 4.1.2
   flutter_speed_dial: ^1.2.4
   table_calendar: 2.2.2
   simple_animations: 1.3.8
@@ -61,6 +61,7 @@ dependencies:
   mini_calendar: ^0.3.1
   flutter_picker: ^1.1.4
   flutter_swiper: ^1.1.6
+  inview_notifier_list: 1.0.0
 
 dev_dependencies:
   flutter_test:
