--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   flutter_picker: ^1.1.4
   flutter_swiper: ^1.1.6
   inview_notifier_list: 1.0.0
+  sentry: ^3.0.1
 
 dev_dependencies:
   flutter_test:
