--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   flutter_speed_dial: ^1.2.4
   table_calendar: 2.2.2
   simple_animations: 1.3.8
-  google_sign_in: ^4.0.12
+  google_sign_in: ^4.0.12 #谷歌全家桶
   firebase_analytics: ^5.0.2
   firebase_auth: ^0.15.0
   firebase_storage: ^3.0.10
@@ -57,12 +57,13 @@ dependencies:
   permission_handler: ^3.0.0
   flutter_full_pdf_viewer: ^1.0.6
   flutter_staggered_animations: ^0.1.2
-  qrscan: ^0.2.17
-  mini_calendar: ^0.3.1
+  qrscan: ^0.2.17 #二维码
+  mini_calendar: ^0.3.1 #日历
   flutter_picker: ^1.1.4
   flutter_swiper: ^1.1.6
-  inview_notifier_list: 1.0.0
-  sentry: ^3.0.1
+  inview_notifier_list: 1.0.0 #视频滚动到播放
+  sentry: ^3.0.1  #日志监听
+  connectivity: ^0.4.8+6
 
 dev_dependencies:
   flutter_test:
