--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,10 @@
 buildscript {
     ext.kotlin_version = '1.3.0'
     repositories {
-        google()
-        jcenter()
+//        google()
+//        jcenter()
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
     }
 
     dependencies {
@@ -14,8 +16,10 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        jcenter()
+//        google()
+//        jcenter()
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
     }
 }
 
