--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,15 +38,15 @@ dependencies:
   flutter_speed_dial: ^1.2.4
   table_calendar: 2.2.2
   simple_animations: 1.3.8
-  google_sign_in: ^4.0.12 #谷歌全家桶
-  firebase_analytics: ^5.0.2
-  firebase_auth: ^0.15.0
-  firebase_storage: ^3.0.10
-  firebase_database: ^3.0.9
-  firebase_core: ^0.4.0+9
+  google_sign_in: 4.0.12 #谷歌全家桶
+  firebase_analytics: 5.0.2
+  firebase_auth: 0.15.0
+  firebase_storage: 3.0.10
+  firebase_database: 3.0.9
+  firebase_core: 0.4.0+9
   http: ^0.12.0+4
   photo_view: ^0.4.2
-  agora_rtc_engine: ^1.0.1
+  agora_rtc_engine: 1.0.1
   video_player: ^0.10.2+5
   orientation: ^1.1.0
   common_utils: ^1.1.3
@@ -54,7 +54,7 @@ dependencies:
   intl: ^0.16.1
   audioplayers: 0.13.6
   image_picker_saver: 0.3.0
-  permission_handler: ^3.0.0
+  permission_handler: 3.0.0
   flutter_full_pdf_viewer: ^1.0.6
   flutter_staggered_animations: ^0.1.2
   qrscan: ^0.2.17 #二维码
@@ -67,6 +67,7 @@ dependencies:
   image_gallery_saver: ^1.2.2
   flutter_plugin_record: 0.1.8
   path_provider: ^1.6.14
+  sqflite: ^1.3.1+1
 
 dev_dependencies:
   flutter_test:
