--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   flutter_plugin_record: 0.1.8
   path_provider: ^1.6.14
   sqflite: ^1.3.1+1
+  bot_toast: 2.4.1
 
 dev_dependencies:
   flutter_test:
