--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -15,7 +15,7 @@ dependencies:
   sliding_up_panel: ^0.3.6
   liquid_swipe: ^1.4.3
   shared_preferences: ^0.5.12+4
-  image_picker: 0.6.2
+  image_picker: ^0.6.0+20
   curved_navigation_bar: ^0.3.2
   url_launcher: ^5.2.1
   local_auth: ^0.6.1
@@ -32,13 +32,13 @@ dependencies:
   http: ^0.12.0+4
   photo_view: ^0.4.2
   agora_rtc_engine: 1.0.1
-  video_player: ^0.10.2+5
+  video_player: ^0.10.11+2
   orientation: ^1.1.0
   common_utils: ^1.1.3
   dio: ^3.0.9
   intl: ^0.16.1
   audioplayers: 0.13.6
-  image_picker_saver: 0.3.0
+  image_picker_saver: ^0.3.0
   permission_handler: 3.0.0
   flutter_full_pdf_viewer: ^1.0.6
   flutter_staggered_animations: ^0.1.2
