--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   bot_toast: 4.0.0
   flutter_local_notifications: 2.0.0
   scrollable_positioned_list: ^0.1.9
+  move_to_background: ^1.0.0
   lpinyin: ^1.0.9   # 汉字转拼音
 #  flutter_doraemonkit:
 #    path: C:\Users\coco\AndroidStudioProjects\flutter_doraemonkit
