--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,14 +14,13 @@ dependencies:
   flutter_screenutil: ^0.5.2
   sliding_up_panel: ^0.3.6
   liquid_swipe: ^1.4.3
-  shared_preferences: ^0.5.12+4
+  shared_preferences: ^2.0.5
   image_picker: ^0.6.0+20
   curved_navigation_bar: ^0.3.2
   url_launcher: ^5.2.1
-  local_auth: ^0.6.1
+  local_auth: ^1.1.4
   provider: 4.1.2
   flutter_speed_dial: ^1.2.4
-  table_calendar: 2.2.2
   simple_animations: 1.3.8
   google_sign_in: 4.0.12 #谷歌全家桶
   firebase_analytics: ^5.0.2
@@ -29,15 +28,15 @@ dependencies:
   firebase_storage: ^3.0.10
   firebase_database: ^3.0.9
   firebase_core: 0.4.0+9
-  http: ^0.12.0+4
+  http: ^0.13.1
   photo_view: ^0.4.2
   agora_rtc_engine: ^1.0.1
   video_player: ^0.10.11+2
   orientation: ^1.1.0
   common_utils: ^1.1.3
-  dio: ^3.0.9
-  intl: ^0.16.1
-  audioplayers: 0.13.6
+  dio: ^4.0.0
+  intl: ^0.17.0
+  audioplayers: ^0.18.3
   image_picker_saver: ^0.3.0
   permission_handler: 3.0.0
   flutter_full_pdf_viewer: ^1.0.6
@@ -47,14 +46,14 @@ dependencies:
   flutter_picker: ^1.1.4
   flutter_swiper: ^1.1.6
   inview_notifier_list: 1.0.0 #视频滚动到播放
-  sentry: ^3.0.1  #日志监听
-  connectivity: ^0.4.8+6
+  sentry: ^5.0.0  #日志监听
+  connectivity: ^3.0.3
   image_gallery_saver: ^1.2.2
-  flutter_plugin_record: 0.1.8
-  path_provider: ^1.6.14
+  flutter_plugin_record: ^1.0.1
+  path_provider: ^2.0.1
   sqflite: ^1.3.1+1
   bot_toast: 4.0.0
-  flutter_local_notifications: 2.0.0
+  flutter_local_notifications: ^5.0.0+1
   scrollable_positioned_list: ^0.1.9
   move_to_background: ^1.0.0
   lpinyin: ^1.0.9   # 汉字转拼音
