--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,13 +13,13 @@ dependencies:
   flutter_slidable: ^0.5.4
   flutter_screenutil: ^0.5.2
   sliding_up_panel: ^0.3.6
-  liquid_swipe: ^1.4.3
+  liquid_swipe: ^2.1.0
   shared_preferences: ^2.0.5
   image_picker: ^0.6.0+20
   curved_navigation_bar: ^0.3.2
   url_launcher: ^5.2.1
   local_auth: ^1.1.4
-  provider: 4.1.2
+  provider: 5.0.0
   flutter_speed_dial: ^1.2.4
   simple_animations: 1.3.8
   google_sign_in: 4.0.12 #谷歌全家桶
@@ -31,7 +31,7 @@ dependencies:
   http: ^0.13.1
   photo_view: ^0.4.2
   agora_rtc_engine: ^1.0.1
-  video_player: ^0.10.11+2
+  video_player: ^2.1.1
   orientation: ^1.1.0
   common_utils: ^1.1.3
   dio: ^4.0.0
@@ -55,6 +55,7 @@ dependencies:
   bot_toast: 4.0.0
   flutter_local_notifications: ^5.0.0+1
   scrollable_positioned_list: ^0.1.9
+  wechat_assets_picker: ^5.5.3
   move_to_background: ^1.0.0
   lpinyin: ^1.0.9   # 汉字转拼音
 #  flutter_doraemonkit:
