--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  event_bus: ^1.1.0
+  event_bus: ^2.0.0
+  mqtt_client: ^9.3.1
   drag_list: ^1.0.7
   flutter_slidable: ^0.5.4
   flutter_screenutil: ^0.5.2
