--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   orientation: ^1.1.0
   common_utils: ^1.1.3
   dio: ^4.0.0
+  cookie_jar: ^3.0.1
+  dio_cookie_manager: ^2.0.0
   intl: ^0.17.0
   audioplayers: ^0.18.3
   image_picker_saver: ^0.3.0
