--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,8 +3,8 @@ buildscript {
     repositories {
 //        google()
 //        jcenter()
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
     }
 
     dependencies {
@@ -18,8 +18,8 @@ allprojects {
     repositories {
 //        google()
 //        jcenter()
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
-        maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
     }
 }
 
