--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,13 +67,16 @@ dependencies:
   call: ^0.3.0
   flutter_intro: ^2.3.0
   ios_share:
-    git: https://github.com/NayoLx/ios_share.git
+    git:
+      url: https://github.com/NayoLx/ios_share.git
   ota_update: ^3.0.2
   package_info: ^2.0.2
   postgres: ^2.3.2
   epubx: ^3.0.0-dev.3
   epub_view: ^2.1.0
   file_picker: ^3.0.3
+  tabbed_view: ^1.1.0+1
+  multi_split_view: ^1.5.0
 
 dev_dependencies:
   flutter_test:
