--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   file_picker: ^3.0.3
   tabbed_view: ^1.1.0+1
   multi_split_view: ^1.5.0
+  back_button_interceptor: ^5.0.1
 
 dev_dependencies:
   flutter_test:
