--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ dependencies:
   tabbed_view: ^1.1.0+1
   multi_split_view: ^1.5.0
   back_button_interceptor: ^5.0.1
+  nayuta_sensors: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -106,4 +107,5 @@ flutter:
     - assets/long14.epub
     - assets/data/
     - assets/dll/
+    - assets/banner/
 
