--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ dependencies:
   multi_split_view: ^1.5.0
   back_button_interceptor: ^5.0.1
   nayuta_sensors: ^1.0.0
+  searchfield: ^0.5.2
 
 dev_dependencies:
   flutter_test:
