--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   image_gallery_saver: ^1.2.2
   flutter_plugin_record: ^1.0.1
   path_provider: ^2.0.1
-  sqflite: ^1.3.1+1
+  sqflite: ^2.0.0+3
   bot_toast: 4.0.0
   flutter_local_notifications: ^5.0.0+1
   scrollable_positioned_list: ^0.2.0-nullsafety.0
@@ -79,6 +79,8 @@ dependencies:
   back_button_interceptor: ^5.0.1
   nayuta_sensors: ^1.0.0
   k_chart: ^0.4.0
+  cached_network_image: ^3.1.0
+  flutter_splash_screen: ^0.3.0
 
 dev_dependencies:
   flutter_test:
