--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ dependencies:
   k_chart: ^0.4.0
   cached_network_image: ^3.1.0
   flutter_splash_screen: ^0.3.0
+  encrypt: ^5.0.1
 
 dev_dependencies:
   flutter_test:
