--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -104,6 +104,7 @@ flutter:
     - images/cloud2.gif
     - images/cloud1.gif
     - images/cloud5.gif
+    - images/test.gif
     - images/weather/
     - images/voice/
     - images/_cat_sky.jpg
