--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   flutter_staggered_animations: ^0.1.2
   qrscan: ^0.2.17 #二维码
   mini_calendar: ^0.3.1 #日历
-  flutter_picker: ^1.1.4
+  flutter_picker: ^2.0.2
   flutter_swiper: ^1.1.6
   inview_notifier_list: 1.0.0 #视频滚动到播放
   sentry: ^5.0.0  #日志监听
@@ -83,6 +83,7 @@ dependencies:
   cached_network_image: ^3.1.0
   flutter_splash_screen: ^0.3.0
   encrypt: ^5.0.1
+  fl_chart: ^0.40.2
 
 dev_dependencies:
   flutter_test:
