--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,7 +83,7 @@ dependencies:
   cached_network_image: ^3.1.0
   flutter_splash_screen: ^0.3.0
   encrypt: ^5.0.1
-  fl_chart: ^0.40.2
+  syncfusion_flutter_charts : ^19.3.48
 
 dev_dependencies:
   flutter_test:
