--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ dependencies:
   flutter_splash_screen: ^0.3.0
   encrypt: ^5.0.1
   syncfusion_flutter_charts : ^19.3.48
+  flutter_shortcuts : ^1.2.2
 
 dev_dependencies:
   flutter_test:
