--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   intl: ^0.17.0
   audioplayers: ^0.18.3
   image_picker_saver: ^0.3.0
-  permission_handler: 3.0.0
+  permission_handler: ^8.3.0
   flutter_full_pdf_viewer: ^1.0.6
   flutter_staggered_animations: ^0.1.2
   qrscan: ^0.2.17 #二维码
@@ -86,6 +86,7 @@ dependencies:
   syncfusion_flutter_charts : ^19.3.48
   flutter_shortcuts : ^1.2.2
   keyboard_actions: ^3.4.4
+  agora_rtc_engine: ^4.0.7
 
 dev_dependencies:
   flutter_test:
