--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,7 @@ dependencies:
   flutter_shortcuts : ^1.2.2
   keyboard_actions: ^3.4.4
   agora_rtc_engine: ^4.0.7
+  flutter_neumorphic: ^3.2.0
 
 dev_dependencies:
   flutter_test:
