--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   curved_navigation_bar: ^0.3.2
   url_launcher: ^5.2.1
   local_auth: ^1.1.4
-  provider: 5.0.0
+  provider: ^6.0.1
   flutter_speed_dial: ^1.2.4
   simple_animations: 1.3.8
   google_sign_in: 4.0.12 #谷歌全家桶
@@ -56,7 +56,7 @@ dependencies:
   bot_toast: 4.0.0
   flutter_local_notifications: ^5.0.0+1
   scrollable_positioned_list: ^0.2.0-nullsafety.0
-  wechat_assets_picker: ^5.5.3
+  wechat_assets_picker: ^6.3.1
   move_to_background: ^1.0.0
   lpinyin: ^1.0.9   # 汉字转拼音
   #  flutter_doraemonkit:
@@ -72,7 +72,7 @@ dependencies:
   package_info: ^2.0.2
   postgres: ^2.3.2
   epubx: ^3.0.0-dev.3
-  epub_view: ^2.1.0
+  epub_view: ^2.3.0
   file_picker: ^3.0.3
   tabbed_view: ^1.1.0+1
   multi_split_view: ^1.5.0
