--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,7 @@ dependencies:
   keyboard_actions: ^3.4.4
   agora_rtc_engine: ^4.0.7
   flutter_neumorphic: ^3.2.0
+  flutter_image_compress: ^1.1.0
 
 #  dropdown_search:
 
