--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ dependencies:
   flutter_neumorphic: ^3.2.0
   flutter_image_compress: ^1.1.0
   video_compress_ds: ^3.1.6
+  sudoku_solver_generator: ^2.1.0+1
 
 #  dropdown_search:
 
