--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,7 +94,7 @@ dependencies:
   local_notifier: ^0.1.1 #桌面消息推送
   win_toast: ^0.0.2 #桌面端的toast弹窗
   tray_manager: ^0.1.4 #系统托盘
-  window_manager: ^0.2.0
+  window_manager: ^0.2.0 #有关窗口设置的包
 
 
 #  dropdown_search:
