--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -42,21 +42,34 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string></string>
+	<string>本app需要访问相机</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>本app需要访问麦克风</string>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>本app需要访问音乐</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string></string>
+	<string>本app需要在使用期间需要获取你的位置</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string></string>
+	<string>本app需要获取位置</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>本app需要在使用期间需要获取你的位置</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string></string>
+	<string>本app需要访问相册</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
-	<string></string>
+	<string>本app需要访问语音</string>
+	<key>UISupportsDocumentBrowser</key>
+    <true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>UIBackgroundModes</key>
+    <array>
+       <string>fetch</string>
+       <string>remote-notification</string>
+    </array>
+    <key>LSSupportsOpeningDocumentsInPlace</key>
+    <true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
