--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,35 +41,35 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSCameraUsageDescription</key>
-	<string>本app需要访问相机</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>本app需要访问麦克风</string>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
 	<key>NSAppleMusicUsageDescription</key>
 	<string>本app需要访问音乐</string>
+	<key>NSCameraUsageDescription</key>
+	<string>本app需要访问相机</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>本app需要在使用期间需要获取你的位置</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>本app需要获取位置</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>本app需要在使用期间需要获取你的位置</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>本app需要访问麦克风</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>本app需要访问相册</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
 	<string>本app需要访问语音</string>
-	<key>UISupportsDocumentBrowser</key>
-    <true/>
+	<key>NSUserNotificationsUsageDescription</key>
+	<string>允许本app给你发消息嘛</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
-	<key>UIBackgroundModes</key>
-    <array>
-       <string>fetch</string>
-       <string>remote-notification</string>
-    </array>
-    <key>LSSupportsOpeningDocumentsInPlace</key>
-    <true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
@@ -83,6 +83,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UISupportsDocumentBrowser</key>
+	<true/>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 </dict>
