--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   sentry: ^5.0.0  #日志监听
   connectivity: ^3.0.3
   image_gallery_saver: ^1.2.2 #文件保存
-  flutter_plugin_record: ^1.0.1 #录音
+#  flutter_plugin_record: ^1.0.1 #录音
   path_provider: ^2.0.1
   sqflite: ^2.0.0+3 #sql数据库
   bot_toast: 4.0.0 #弹窗
@@ -97,11 +97,15 @@ dependencies:
   window_manager: ^0.2.0 #有关窗口设置的包
   dynamic_widget: ^4.0.4
   shell: ^2.0.0 #调用命令行
-  redis: ^3.1.0
-  json_serializable: ^6.2.0
-  build_runner: ^2.1.10
-  flame: ^1.2.0
-  webview_flutter: ^3.0.4
+  redis: ^3.1.0 #redis
+  json_serializable: ^6.2.0 #json格式化
+  build_runner: ^2.1.10 #json格式化配套
+  flame: ^1.2.0 #游戏引擎
+  webview_flutter: ^3.0.4 #webview
+  flutter_riverpod: ^1.0.3 #river
+
+#  plugin_test:
+#    path: /Users/lixuan/Documents/work/plugin_test
 
 
 #  dropdown_search:
