--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,9 @@ dependencies:
   flutter_slidable: ^0.5.4 #列表侧边菜单
   flutter_screenutil: ^0.5.2 #size适配
   liquid_swipe: ^3.0.0 #滑动组件
-  shared_preferences: ^2.0.5 #key-value存储
   image_picker: ^0.8.5+3 #图片选择
   curved_navigation_bar: ^0.3.2
-  local_auth: ^1.1.4
+  local_auth: ^2.1.2
   flutter_speed_dial: ^6.0.0
 #  google_sign_in: 4.0.12 #谷歌全家桶
 #  firebase_analytics: ^5.0.2
@@ -64,7 +63,7 @@ dependencies:
   win_toast: ^0.0.2 #桌面端的toast弹窗
   tray_manager: ^0.1.4 #系统托盘
   window_manager: ^0.2.0 #有关窗口设置的包
-  dynamic_widget: ^4.0.4
+#  dynamic_widget: ^4.0.4
   shell: ^2.0.0 #调用命令行
   redis: ^3.1.0 #redis
   json_serializable: ^6.2.0 #json格式化
@@ -78,8 +77,8 @@ dependencies:
   self_utils:
     git: https://github.com/Yosuke-li/self_utils.git
 
-#  plugin_test:
-#    path: /Users/lixuan/Documents/work/plugin_test
+#  ios_share:
+#    path: /Users/lixuan/Documents/work/ios_share
 
 
 #  dropdown_search:
