style: markdown的简单实现

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter application.
 version: 2.0.0
 
 environment:
-  sdk: ">=2.17.2 <3.0.0"
+  sdk: ">=2.16.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -74,14 +74,12 @@ dependencies:
   udp: ^5.0.3 #udp广播
   image_picker_saver: ^0.3.0
   file_picker: ^4.6.1 #文件选择器
+  flutter_markdown: ^0.6.6
   self_utils:
     git: https://github.com/Yosuke-li/self_utils.git
-
-#  ios_share:
-#    path: /Users/lixuan/Documents/work/ios_share
-
-
-#  dropdown_search:
+#  本地
+#  self_utils:
+#    path: /Users/lixuan/Documents/work/self_utils
 
 dev_dependencies:
   flutter_test:
@@ -109,6 +107,7 @@ flutter:
     - images/
     - images/_cat_sky.jpg
     - assets/index.pdf
+    - assets/
     - assets/depth.json
     - assets/result.json
     - assets/long14.epub
