style: svg资源测试使用

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,7 +77,8 @@ dependencies:
   image_picker_saver: ^0.3.0
   file_picker: ^4.6.1 #文件选择器
   flutter_markdown: ^0.6.6 #markdown
-  animated_text_kit: ^4.2.2 
+  animated_text_kit: ^4.2.2
+  flutter_svg: ^1.0.3
 #  self_utils:
 #    git: https://github.com/Yosuke-li/self_utils.git
 #  本地
@@ -86,8 +87,7 @@ dependencies:
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter
-
+    sdk: flutterf
 flutter:
   uses-material-design: true
   assets:
