--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,12 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl_utils: ^2.8.2 #国际化
-  drag_list: ^1.0.7 #拖拽
-  flutter_slidable: ^0.5.4 #列表侧边菜单
-  flutter_screenutil: ^0.5.2 #size适配
+  drag_and_drop_lists: ^0.3.3 #拖拽
+  flutter_slidable: ^3.0.1 #列表侧边菜单
+  flutter_screenutil: ^5.9.0 #size适配
   liquid_swipe: ^3.0.0 #滑动组件
-  image_picker: ^0.8.5+3 #图片选择
-  curved_navigation_bar: ^0.3.2
+  image_picker: ^1.0.7 #图片选择ph
+  curved_navigation_bar: ^1.0.3
   local_auth: ^2.1.2
   flutter_speed_dial: ^6.0.0
   #  google_sign_in: 4.0.12 #谷歌全家桶
@@ -26,21 +26,18 @@ dependencies:
   #  firebase_database: ^3.0.9
   #  firebase_core: 0.4.0+9
   http: ^0.13.1 #http
-  orientation: ^1.1.0
   audioplayers: ^1.0.0 #音频播放
-  flutter_full_pdf_viewer: ^1.0.6  #pdf浏览器
-  flutter_staggered_animations: ^0.1.2 #动画
-  qrscan: ^0.2.17 #二维码
-  mini_calendar: ^0.3.1 #日历
+  flutter_full_pdf_viewer_null_safe: ^1.0.0  #pdf浏览器
+  flutter_staggered_animations: ^1.1.1 #动画
+  qrscan: ^0.3.3 #二维码
   flutter_picker: ^2.0.2 #文件选择
-  flutter_swiper: ^1.1.6 #滑动
+  flutter_swiper_null_safety: ^1.0.2 #滑动
   inview_notifier_list: 3.0.0 #视频滚动到播放
 #  connectivity_plus: ^3.0.4
   #  flutter_plugin_record: ^1.0.1 #录音
   sqflite: ^2.2.6 #sql数据库
   flutter_local_notifications: ^13.0.0 #本地消息推送
   scrollable_positioned_list: ^0.3.2 #滚动
-  wechat_assets_picker: ^7.0.5 #微信的文件选择器
   move_to_background: ^1.0.0 #退出app到后台
   lpinyin: ^2.0.3   # 汉字转拼音
   #  flutter_doraemonkit:
@@ -54,11 +51,11 @@ dependencies:
   cached_network_image: ^3.1.0 #图片缓存
   syncfusion_flutter_charts: ^20.2.43 #折线图
   #  agora_rtc_engine: ^4.0.7 #声网api
-  flutter_neumorphic: ^3.2.0 #动画组件
+  flutter_neumorphic_plus: ^3.3.0 #动画组件
   image_compression: ^1.0.3
   video_compress_ds: ^3.1.6 #视频压缩
   sudoku_solver_generator: ^2.1.0+1 #数独api
-  desktop_drop: ^0.3.3 #桌面拖动
+  desktop_drop: ^0.4.4 #桌面拖动
   cross_file: ^0.3.2 #解析xfile
   local_notifier: ^0.1.1 #桌面消息推送
   win_toast: ^0.0.2 #桌面端的toast弹窗
@@ -72,7 +69,6 @@ dependencies:
   webview_flutter: ^3.0.4 #webview
   flutter_riverpod: ^1.0.4 #river
   udp: ^5.0.3 #udp广播
-  image_picker_saver: ^0.3.0
   file_picker: ^5.2.10 #文件选择器
   flutter_markdown: ^0.6.6 #markdown
   animated_text_kit: ^4.2.2
